spacing fix

--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -1,6 +1,6 @@
 .cardImg {
     height: auto;
-    width: 10vw;
+    width: 100%;
     margin: auto;
     padding: 5% 2% 5% 2%;
 }
