--- a/src/components/JumboGreeting/style.css
+++ b/src/components/JumboGreeting/style.css
@@ -1,5 +1,4 @@
 .jumbotron {
-    height: 30vh;
     background-image: url("whale.gif");
     background-position: center;
     background-repeat: no-repeat;
